--- a/proyectoEquinoBackend/equinos/templates/registration/login.html
+++ b/proyectoEquinoBackend/equinos/templates/registration/login.html
@@ -4,14 +4,19 @@
     <title>Login</title>
 </head>
 <body>
-    <h2>Iniciar sesión</h2>
-    <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Entrar</button>
-    </form>
-    {% if form.errors %}
-        <p style="color:red;">Usuario o contraseña inválidos</p>
-    {% endif %}
+{% extends 'base.html' %}
+
+{% block title %}Iniciar sesión{% endblock %}
+
+{% block content %}
+  <h2>Iniciar sesión</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Entrar</button>
+  </form>
+{% endblock %}
+
+
 </body>
 </html>
